fixed bugs and added train model

--- a/rle.ipynb
+++ b/rle.ipynb
@@ -284,11 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_nrrd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-797dcee843ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_nrrd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/qinwenhuang/Documents/AtriaSeg_2018_training/Training Set/06SR5RBREL16DQ6M8LWS/lgemri.nrrd\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_nrrd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "image = load_nrrd(\"/Users/qinwenhuang/Documents/AtriaSeg_2018_training/Training Set/06SR5RBREL16DQ6M8LWS/lgemri.nrrd\")\n"
    ]
